# disnake-bot-modules

./: README.md  main.py  pyproject.toml
cogs/: admin.py  giveaway.py  help.py  invite_tracker.py  matchmaker.py  simplepoll.py  trivia.py
cogs/_trivia/: trivia_requirements.txt
cogs/_trivia/data/: trivia.db  trivia.txt
cogs/_trivia/utils/: api.py  buttons.py  db.py
modules/teams/: teams.py
modules/trivia/: __init__.py  trivia.py
modules/trivia/data/: categories.json
modules/trivia/utils/: api.py  buttons.py  db.py
