[tool.poetry]
name = "disnake-bot-modules"
version = "0.1.0"
description = "A collection of various discord bot modules that I use designed for Disnake"
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "disnake_bot_modules"}]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.7.0"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
